test/echo/httproute-private/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-private
spec:
  hostnames:
  - echo2-private.suffix-automatic-replace
  parentRefs:
  - kind: Gateway
    namespace: gateways
    name: main-private
    sectionName: https-main
  rules:
  - backendRefs:
    - kind: Service
      name: echo
      port: 80
    sessionPersistence:
      type: Cookie
      sessionName: persistent-echo
      cookieConfig:
        lifetimeType: Session
      absoluteTimeout: 24h
      idleTimeout: 24h
